--- a/app/assets/stylesheets/modules/_show_products.scss
+++ b/app/assets/stylesheets/modules/_show_products.scss
@@ -17,6 +17,16 @@
     }
   }
 }
+
+.sold-show {
+  color: red;
+  font-family: "Impact";
+  font-weight: bolder;
+  font-size: 70px;
+  letter-spacing: 4px;
+  text-align: center;
+}
+
 .main{
   background: #f8f8f8;
   .showMain{
