--- a/app/assets/stylesheets/modules/_products.scss
+++ b/app/assets/stylesheets/modules/_products.scss
@@ -446,8 +446,8 @@ li {
 
 .mainBrand {
   background-color: #f8f8f8;
-  padding-top: 200px;
-  padding-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 200px;
 
   &__title {
     text-align: center;
@@ -494,6 +494,22 @@ li {
       opacity: 0.5;
     }
   }
+}
+
+.sold-char {
+  color: red;
+  font-family: "Impact";
+  font-weight: bolder;
+  font-size: 70px;
+  letter-spacing: 4px;
+  transform: rotate(-18deg);
+  text-align: center;
+  position: relative;
+  top: -170px;
+}
+
+.sold-product {
+  opacity: 0.5;
 }
 
 
