--- a/app/views/products/_topbar.html.haml
+++ b/app/views/products/_topbar.html.haml
@@ -14,7 +14,7 @@
           .category-overlay
           .parents__list.show_hover.displayNone
             - @parents.each do |parent|
-              = link_to "#{parent.name}", "#", class: "parent_category", id: "#{parent.id}"
+              = link_to "#{parent.name}", "/categories/#{parent.id}", class: "parent_category", id: "#{parent.id}"
           .children_list
           .grand_children_list
         .brand
