--- a/app/views/card/new.html.haml
+++ b/app/views/card/new.html.haml
@@ -7,15 +7,8 @@
         .card-number カード番号
         %span.form-require 必須
       .number
+        = image_tag "/card.images/5brand.gif", class: "card_5brand"
         = text_field_tag 'payment_card_no', "", class: 'cardnumber', id: "payment_card_no", placeholder: '半角数字のみ', type: "text", maxlength: "16"
-      -# 事前に各カード会社の画像を入れておき、呼び出す。
-      -# .image
-      -#   = image_tag(image_path('cards/visa.png'), class: 'visa')
-      -#   = image_tag(image_path('cards/master.png'), class: 'master')
-      -#   = image_tag(image_path('cards/jcb.png'), class: 'jcb')
-      -#   = image_tag(image_path('cards/amex.png'), class: 'amex')
-      -#   = image_tag(image_path('cards/diners.png'), class: 'diners')
-      -#   = image_tag(image_path('cards/discover.png'), class: 'discover')
       .number-details
         .card-number 有効期限
         %span.form-require 必須
@@ -54,6 +47,6 @@
         %span.form-require 必須
       .number
         = text_field_tag  "payment_card_cvc", "", type: 'text', class: 'cardnumber', id: "payment_card_cvc", maxlength: "4", placeholder: 'カード背面4桁もしくは3桁の番号'
-      .add 
-        = submit_tag "登録する", class: "token-submit", id: "payment_card_submit-button" 
+      .button
+        = submit_tag "登録する", class: "payment_submit", id: "payment_card_submit-button" 
 = render "card_footer" 
