create-category-page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "modules/products";
 @import "modules/users";
 @import "modules/show_users";
+@import "modules/show_categories.scss";
 @import "modules/new_products";
 @import "modules/show_products";
 @import "modules/orders";
