--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -4,4 +4,43 @@
   = @category.name
   の商品一覧
 
+.mainCategory__wrapper.Category_products_wrapper
+  - if @category_product_array.blank?
+    = @category.name
+    の商品はまだありません。
+  - else
+    - @category_product_array.each do |product|
+      - if product.purchase_id == nil
+        = link_to product_path(product) do
+          .Products
+            = image_tag Image.find_by(product_id: product.id).src.url, class: "CategoryPic"
+            .Products__info
+              %p.name
+                = product.name
+              .price
+                .price__left
+                  = product.price
+                  円
+                .price__right
+                  ★
+                  0
+              %p.tax (税込)
+      - else
+        = link_to show_sold_product_path(product) do
+          .Products.sold-product
+            = image_tag Image.find_by(product_id: product.id).src.url, class: "CategoryPic"
+            .Products__info
+              %p.name
+                = product.name
+              .price
+                .price__left
+                  = product.price
+                  円
+                .price__right
+                  ★
+                  0
+              %p.tax (税込)
+          .sold-char
+            SOLD
+
 = render partial: 'products/footer'
