--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,10 +2,23 @@
 @import "modules/products";
 @import "modules/users";
 @import "modules/show_users";
-@import "modules/show_categories.scss";
+@import "modules/show_categories";
 @import "modules/new_products";
 @import "modules/show_products";
 @import "modules/orders";
 @import "modules/card";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+.notifications {
+  color: white;
+  text-align: center;  
+
+  .notice {
+    background-color: #3CCACE;
+  }
+
+  .alert {
+    background-color: orange;
+  }
+}
