user_products-create

--- a/app/assets/stylesheets/modules/_show_users.scss
+++ b/app/assets/stylesheets/modules/_show_users.scss
@@ -171,6 +171,9 @@
             }
           }
         }
+        .mypage-nav:hover {
+          background-color: #3CCACE;
+        }
       }
       .mypage-nav-head{
         font-weight: bold;
