--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -15,7 +15,8 @@
             %span.bold 0
           %div
             出品数
-            %span.bold 0
+            %span.bold
+              = @user_products_array.size
       %section.mypage-tab
         %ul.mypage-tab-container
           %li.active
