--- a/app/views/devise/registrations/new_address.html.haml
+++ b/app/views/devise/registrations/new_address.html.haml
@@ -60,13 +60,13 @@
           .FormField
             .FormField__label--normal
               = f.label :建物名
-              %span.form-require 必須
+              %span.form-enquire 任意
             .FormField__input--normal
               = f.text_field :remarks, placeholder: "例) 柳ビル103"
           .FormField
             .FormField__label--normal
               = f.label :電話
-              %span.form-require 必須
+              %span.form-enquire 任意
             .FormField__input--normal
               = f.text_field :phone_number, placeholder: "例) 09012345678"
             .has-error-text ※ 本人情報は正しく入力してください。
